[tool.poetry]
name = "ppe-analytics-upload"
version = "0.1.0"
description = ""
authors = ["George Murgă <george.murga+github@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
xlsxwriter = "^3.2.0"
chardet = "^5.2.0"
pysimplegui = "^5.0.4"
niquests = "^3.5.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pylint = "^3.1.0"
pyinstaller = "^6.6.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.isort]
force-single-line = true

[tool.isort]
force_single_line = true
